--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -21,7 +21,8 @@ h1 {
 }
 
 p {
-  font-size: 30px;
+  color: #e4e4e4;
+  font-size: 27px;
   line-height: 1.2;
   margin: 0 0 $spacing-block 0;
   color: #e4e4e4;
